# dioxus-oidc-prototype

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  package-lock.json  package.json  rustfmt.toml
assets/: stylesheet.css
src/: lib.rs  log.rs  main.rs  route.rs  storage.rs  window.rs
src/components/: app.rs  callback.rs  colophon.rs  header.rs  high_five.rs  home.rs  logged_out.rs  login.rs  login_logout.rs  login_logout_button.rs  mod.rs  nav.rs  page_not_found.rs  profile.rs  template.rs
src/components/callback/: callback_query_segments.rs  callback_state.rs  mod.rs
src/components/login_logout/: client_state.rs  constants.rs  errors.rs  mod.rs  oidc.rs
src/components/login_logout/props/: client.rs
