[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Dioxus OIDC Prototype"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "dioxus-oidc-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-oidc-prototype"
version = "0.0.0-SNAPSHOT"

[[bin]]
name = "prerender"
required-features = ["prerender"]

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "=0.4.3"
dioxus-fullstack = { version = "=0.4.3", optional = true }
dioxus-router = "=0.4.3"
dioxus-web = "=0.4.3"
log = "0.4.20"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"], optional = true }
wasm-logger = "0.2.0"

[features]
hydrate = ["dioxus-fullstack/router", "dioxus-web/hydrate"]
prerender = ["dioxus-fullstack/router", "dioxus-fullstack/ssr", "tokio"]
