[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Dioxus OIDC Prototype"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "dioxus-oidc-prototype"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-oidc-prototype"
version = "0.0.0-SNAPSHOT"

[[bin]]
name = "prerender"
required-features = ["prerender"]

[dependencies]
com-croftsoft-lib-role = "0.5.1"
console_error_panic_hook = "0.1.7"
dioxus = "=0.4.3"
dioxus-fullstack = { version = "=0.4.3", optional = true }
dioxus-router = "=0.4.3"
dioxus-web = "=0.4.3"
form_urlencoded = "1.2.1"
gloo-storage = "0.3.0"
log = "0.4.20"
oauth2 = "4.4.2"
openidconnect = "3.4.0"
reqwest = "0.11.24"
serde = "1.0.196"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"], optional = true }
wasm-logger = "0.2.0"
web-sys = "0.3.68"

[features]
hydrate = ["dioxus-fullstack/router", "dioxus-web/hydrate"]
prerender = ["dioxus-fullstack/router", "dioxus-fullstack/ssr", "tokio"]
